# bios-app

./: .gitignore  Procfile  passenger_wsgi.py  pyproject.toml  render.yaml  requirements.txt
bios_workbench/: README.md  requirements.txt
bios_workbench/core/: architecture_diagram.py  contract.py  drawio_export.py  engine.py  intelligence.py  utils.py  view_builders.py
bios_workbench/data/: sample_lead_to_order.csv
bios_workbench/tests/: test_drawio.py  test_engine.py  test_views.py
bios_workbench/ui/: app.py  components.py
bios_workbench/ui/assets/: drawio_embed.html  flow_studio.html  style.css
bios_workbench/ui/templates/: index.html
